New unicode symbols : ll ►

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,8 +25,8 @@
     <string name="left" translatable="false">←</string>
     <string name="power_btn" translatable="false">I/O</string>
     <string name="wb" translatable="false">↞</string>
-    <string name="p" translatable="false">||</string>
-    <string name="pl" translatable="false">⇛</string>
+    <string name="p" translatable="false">ll</string>
+    <string name="pl" translatable="false">►</string>
     <string name="wf" translatable="false">↠</string>
 
     <string name="ChanelMn">Chanel -</string>
