--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -97,4 +97,5 @@
 Выберите \"Начать\" и нажмите кнопку, действие которой необходимо запомнить."</string>
 
     <string name="start">Начать</string>
+    <string name="ver">Версия</string>
 </resources>
