--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -40,5 +40,6 @@
 
 Başla seçin və proqramlar öyrənmək istədiyiniz düyməsini basın.</string>
     <string name="start">Başla</string>
+    <string name="ver">Versiya</string>
 
 </resources>
