--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -99,4 +99,5 @@ Wollen Sie fortfahren?</string>
 
 Wählen Sie „Start“ und drücken Sie auf die Taste, die von der App gelernt werden soll."</string>
     <string name="start">Start</string>
+    <string name="ver">Version</string>
 </resources>
