--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -41,5 +41,7 @@
 Başla seçin və proqramlar öyrənmək istədiyiniz düyməsini basın.</string>
     <string name="start">Başla</string>
     <string name="ver">Versiya</string>
+    <string name="tvradio">TV/RADIO</string>
+    <string name="audio">Səs</string>
 
 </resources>
