--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -45,5 +45,6 @@ Başla seçin və proqramlar öyrənmək istədiyiniz düyməsini basın.</strin
     <string name="audio">Səs</string>
     <string name="no_root">Sizdə root yoxdu! Bu progamm işlemiyecey!</string>
     <string name="bad_perm">Sizin fayilarivinizin icazələri düzgün deyil! Düzəldim onu?</string>
+    <string name="done_setting">Yeni cihaz yaradılması bitti!</string>
 
 </resources>
