--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -102,4 +102,5 @@
     <string name="audio">Звук</string>
     <string name="no_root">Похоже, что у вас нет прав суперпользователя! Эта программа не будет работать!</string>
     <string name="bad_perm">Похоже, что права у ваших файлов выставлены не верно! Исправить?</string>
+    <string name="done_setting">Новое устройство утановлено!</string>
 </resources>
