--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -136,4 +136,6 @@ Select Start and press the button you want the app to learn."</string>
     <string name="no_root">Looks like you don`t have root permissions! This app will not work!</string>
     <string name="bad_perm">Looks like you have wrong file permissions. Fix them?</string>
     <string name="done_setting">Done setting up new device!</string>
+    <string name="vol_key_usage">Choose volume keys usage</string>
+    <string name="vol_key_usageD">Use volume keys as</string>
 </resources>
