--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -60,8 +60,9 @@
     <string name="failed_lk">Не удалось выучить команду! </string>
     <string name="failed_sk">Не удалось отправить команду! </string>
     <string name="fr">Спасибо за установку моего приложения!
-Чтобы начать пользоваться, зайдите в настройки и скачайте файлы вашего телевизора или чего-либо еще. Если вы не можете найти ваше устройство, вы можете записать команды самостоятельно, просто добавив новое устройство в настройках.
-Спасибо!
+Чтобы начать пользоваться, зайдите в настройки и скачайте файлы вашего телевизора или чего-либо еще. Если вы не можете найти ваше устройство, вы можете записать команды самостоятельно.
+        Мы используем Google Analytics API для сбора анонимной информации об ошибках, чтобы улучшить нашу программу.
+        Спасибо!
     ВАЖНО: Это приложение находится на стадии разрабодки и было проверено на устройстве Sony Xperia ZL(odin) с прошивкой CyanogenMod 11!</string>
     <string name="welcome">Добро пожаловать!</string>
     <string name="done">Все!</string>
