--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -73,7 +73,7 @@
     <string name="you_need_to_select">Вам нужно сделать выбор!</string>
     <string name="waiting_for_signal">Ожидание сигнала для записи…</string>
     <string name="warning">Предупреждение!</string>
-    <string name="alredy_exists">Команда, которую вы пытаетесь записать уже существует! Если вы продолжите, то вы уничтожите страрую команду!
+    <string name="already_exists">Команда, которую вы пытаетесь записать уже существует! Если вы продолжите, то вы уничтожите страрую команду!
 
 Продолжить?</string>
     <string name="not_exists">Команда для этой кнопки не существует! Хотите записать сейчас?</string>
