--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -136,4 +136,5 @@ Wählen Sie „Start“ und drücken Sie auf die Taste, die von der App gelernt 
     <string name="endis_mode_btn">De/Aktivieren Modus</string>
     <string name="reset">Rücksetzen</string>
     <string name="pref_title_build_version">Build-Version</string>
+    <string name="not_supported">Ihr Gerät wird nicht unterstützt!</string>
 </resources>
