--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -134,4 +134,5 @@
     <string name="endis_mode_btn">Режим вкл./выкл.</string>
     <string name="reset">Сбросить</string>
     <string name="pref_title_build_version">Версия сборки</string>
+    <string name="not_supported">Ваше устройство не поддерживается!</string>
 </resources>
